--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@ zoom: 67%;
                      <div class="carousel-caption relative">
                         <h1><font color="#ff4500">CANVA PRO FOR FREE</font></h1>
                         <p>Get your link invite team now option 1...  </p>
-                        <a  href="https://ouo.io/0KiKmg0">Get your link here</a>
+                        <a  href="https://sheralinks.com/j5FmW">Get your link here</a>
 			<br><br>
-			<a  href="https://tii.la/canvainvitepro">Or here</a>
+			<a  href="https://tii.la/d902ZDHtV">Or here</a>
+			<br><br>
+			<a  href="https://ouo.io/9jgSsQ4">Or here</a>
+			<br>
                      </div>
                   </div>
                </div>
